--- a/Portal/Views/TextMining/Details.cshtml
+++ b/Portal/Views/TextMining/Details.cshtml
@@ -7,12 +7,13 @@
 
 <h2>@Model.Title</h2>
 <div class="row">
+    @Html.HiddenFor(m=>m.Id)
     <div class="col-md-8">
         @Html.Raw(Model.ContentHtml)
     </div>
     <div class="col-md-4">
         <div class="row">
-            @Html.DropDownList("SkillId", new SelectList(skills, "Id", "Name"))
+            @Html.DropDownList("skillsDropDown", new SelectList(skills, "Id", "Name"))
         </div>
         <div class="row">
             <input id="btnAddZone" type="submit" name="AddZone" value="Добавить"/>
@@ -27,27 +28,28 @@
         var copiedText = "";
 
         $(function () {
-
-            $("#btnAddZone").click(function (event) {
+            $('#btnAddZone').click(function (e) {
+                e.preventDefault();
                 getSelectionText();
                 alert(copiedText);
-                $('#btnSave').click(function (e) {
-                    e.preventDefault();
-                    var element = this;
-                    $.ajax({
-                        url: "/Home/SaveDetailedInfo",
-                        type: "POST",
-                        data: JSON.stringify({ 'Options': someData }),
-                        dataType: "json",
-                        traditional: true,
-                        contentType: "application/json; charset=utf-8",
-                        success: function(data) {
-                            
-                        },
-                        error: function () {
-                            alert("An error has occured!!!");
-                        }
-                    });
+                var zone = new Object();
+                zone.HighlightedText = copiedText;
+                zone.Vacancy = new Object();
+                zone.VacancyId = @Model.Id;
+                zone.SkillId = $("#skillsDropDown option:selected").val();
+                $.ajax({
+                    url: "/api/MarkedZones",
+                    type: "POST",
+                    data: JSON.stringify(zone),
+                    dataType: "json",
+                    traditional: true,
+                    contentType: "application/json; charset=utf-8",
+                    success: function(data) {
+                        alert("Everything fine!");
+                    },
+                    error: function () {
+                        alert("An error has occured!!!");
+                    }
                 });
             });
         });
