--- a/Portal/Views/TextMining/Details.cshtml
+++ b/Portal/Views/TextMining/Details.cshtml
@@ -26,7 +26,7 @@
 {
     <script>
         var copiedText = "";
-
+        bindDelEvent();
         $(function () {
             $('#btnAddZone').click(function (e) {
                 e.preventDefault();
@@ -46,6 +46,7 @@
                     contentType: "application/json; charset=utf-8",
                     success: function(data) {
                         alert("Everything fine!");
+                        updatemarkedZones();
                     },
                     error: function () {
                         alert("An error has occured!!!");
@@ -53,6 +54,12 @@
                 });
             });
         });
+
+        function updatemarkedZones() {
+            $('#markedZones').load("@Url.Action("VacancyMarkedZones", "TextMining", new { vacancyId = @Model.Id})", function() {
+                bindDelEvent();
+            });            
+        }
 
         function getSelectionText() {
             if (window.getSelection) {
@@ -62,5 +69,25 @@
             }
         }
 
-    </script>
+        function bindDelEvent() {
+            $(function () {
+                $('.btnDelZone').click(function (e) {
+                    e.preventDefault();
+                    var id = this.id;
+                    $.ajax({
+                        url: "/api/MarkedZones/"+id,
+                        type: "DELETE",
+                        success: function(data) {
+                            alert("Row deleted!");
+                            updatemarkedZones();
+                        },
+                        error: function () {
+                            alert("An error has occured!!!");
+                        }
+                    });
+                });
+            });    
+        }
+        
+</script>
 }
