--- a/Portal/Views/TextMining/Details.cshtml
+++ b/Portal/Views/TextMining/Details.cshtml
@@ -5,7 +5,7 @@
     List<MarkedZone> zones = ViewBag.ZonesList;
 }
 
-<h2>@Model.Title</h2>
+<h2><a href="@Model.Link">@Model.Title</a></h2>
 <div class="row">
     @Html.HiddenFor(m=>m.Id)
     <div class="col-md-8">
