--- a/Portal/Views/TextMining/VacancyMarkedZones.cshtml
+++ b/Portal/Views/TextMining/VacancyMarkedZones.cshtml
@@ -1,22 +1,28 @@
 ﻿@model IEnumerable<MarkedZone>
 
-<h2>Помеченные области</h2>
+<h2>Размеченные области</h2>
 @if (Model.Count() > 0)
 {
-    <div class="row">
-        <div class="col-md-7"><b>Текст в вакансии</b></div>
-        <div class="col-md-5"><b>Навык</b></div>
-    </div>
-    foreach (MarkedZone zone in Model)
-    {
-        <div class="row">
-            <div class="col-md-7">@zone.HighlightedText</div>
-            <div class="col-md-4">@zone.Skill.Name</div>
-            <div class="col-md-1"><input id="@zone.Id" class="btnDelZone" type="submit" name="btnDelZone" value="Удалить" /></div>
-        </div>
-    }
+    <table>
+        <thead>
+            <tr>
+                <th><b>Текст в вакансии</b></th>
+                <th><b>Навык</b></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (MarkedZone zone in Model)
+            {
+                <tr>
+                    <td class="mark-cell">@zone.HighlightedText</td>
+                    <td class="mark-cell">@zone.Skill.Name</td>
+                    <td><input id="@zone.Id" class="btnDelZone" type="submit" name="btnDelZone" value="Удалить" /></td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
 else
 {
-    <div class="row">Нет данных</div>
+    <h3>Нет данных</h3>
 }
