Добавил контроллер для статистики

--- a/Portal/Views/Shared/_Layout.cshtml
+++ b/Portal/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Главная", "Index", "Home")</li>
                     <li>@Html.ActionLink("Вакансии", "Index", "Vacancy")</li>
+                    <li>@Html.ActionLink("Статистика", "Index", "Stat")</li>
                     @*<li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Marked Zones", "Details", "TextMining")</li>*@
                 </ul>
