--- a/Portal/Content/Site.css
+++ b/Portal/Content/Site.css
@@ -26,3 +26,13 @@ textarea {
 .mark-cell{
     padding-right: 50px;
 }
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    
+}
