after-party fixes

--- a/Portal/Content/Site.css
+++ b/Portal/Content/Site.css
@@ -1,6 +1,4 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -27,12 +25,6 @@ textarea {
     padding-right: 50px;
 }
 
-body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-}
-
-main {
-    
+.brand-logo{
+    padding-left:50px;
 }
