--- a/Portal/Views/Home/Index.cshtml
+++ b/Portal/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 <div class="container">
     <h1>Skills-Miner</h1>
-    <p class="lead">Аналитическая система для выявления атуальных компетенций на основе трбований, описанных в вакансих</p>
+    <p class="lead">Аналитическая система для выявления атуальных компетенций на основе трбований, описанных в вакансиях</p>
     <p>
-        @Html.ActionLink("Переидти", "Index", "Vacancy", null, new { @class = "waves-effect waves-light btn-large" })
+        @Html.ActionLink("Перейти", "Index", "Vacancy", null, new { @class = "waves-effect waves-light btn-large" })
     </p>
 </div>
 <br>
