--- a/Portal/Views/Shared/_Layout.cshtml
+++ b/Portal/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="nav-wrapper">
-            @Html.ActionLink("Skills-Miner", "Index", "Home", null, new { @class = "brand-logo" })
+            @Html.ActionLink("Skills-Miner", "Index", "Home", null, new { @class = "brand-logo logo-text-padding" })
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li>@Html.ActionLink("Главная", "Index", "Home")</li>
                 <li>@Html.ActionLink("Вакансии", "Index", "Vacancy")</li>
